<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_bigger_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="own_app">Capstone: My Own App</string>
    <string name="launch_spotify">This button will launch Spotify App</string>
    <string name="launch_scores">This button will launch Scores App</string>
    <string name="launch_library">This button will launch Library App</string>
    <string name="launch_bigger">This button will launch Build It Bigger App</string>
    <string name="launch_bacon">This button will launch XYZ Reader App</string>
    <string name="launch_own">This button will launch My Own Capstone App</string>
</resources>
