<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/my_nanodegree_apps"/>

    <Button
        android:id="@+id/spotifyBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:onClick="spotifyApp"
        android:text="@string/spotify_app"/>

    <Button
        android:id="@+id/scoresBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:onClick="scoresApp"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/libraryBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:onClick="libraryApp"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/buildItBiggerBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:onClick="buildBiggerApp"
        android:text="@string/build_bigger_app"/>

    <Button
        android:id="@+id/baconReaderBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:onClick="baconReaderApp"
        android:text="@string/xyz_reader_app"/>

    <Button
        android:id="@+id/ownBt"
        style="?attr/buttonStyle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/own_app"
        android:theme="@style/Button.Purple"/>

</LinearLayout>
